<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/newCanvasCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/newCanvas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newCanvasDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/new_canvas_description"
            app:layout_constraintLeft_toRightOf="@+id/newCanvasCommand"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/charcoalCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/charcoal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newCanvasCommand" />

        <TextView
            android:id="@+id/charcoalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/charcoal_description"
            app:layout_constraintLeft_toRightOf="@+id/charcoalCommand"
            app:layout_constraintTop_toBottomOf="@+id/newCanvasCommand"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/eraserCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/eraser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/charcoalCommand" />

        <TextView
            android:id="@+id/eraserDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/eraser_description"
            app:layout_constraintLeft_toRightOf="@+id/eraserCommand"
            app:layout_constraintTop_toBottomOf="@+id/charcoalCommand"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/undoCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/undo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eraserCommand" />

        <TextView
            android:id="@+id/undoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/undo_description"
            app:layout_constraintLeft_toRightOf="@+id/undoCommand"
            app:layout_constraintTop_toBottomOf="@+id/eraserCommand"
            android:layout_gravity="center_vertical"/>


        <TextView
            android:id="@+id/redoCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/redo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/undoCommand" />

        <TextView
            android:id="@+id/redoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/redo_description"
            app:layout_constraintLeft_toRightOf="@+id/redoCommand"
            app:layout_constraintTop_toBottomOf="@+id/undoCommand"
            android:layout_gravity="center_vertical"/>

        <!-- not sure how best to relay this information -->
        <TextView
            android:id="@+id/thicknessCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/thickness"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/redoCommand" />

        <TextView
            android:id="@+id/thicknessDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/thickness_description"
            app:layout_constraintLeft_toRightOf="@+id/thicknessCommand"
            app:layout_constraintTop_toBottomOf="@+id/redoCommand"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/lighterCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/lighter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thicknessCommand" />

        <TextView
            android:id="@+id/lighterDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/lighter_description"
            app:layout_constraintLeft_toRightOf="@+id/lighterCommand"
            app:layout_constraintTop_toBottomOf="@+id/thicknessCommand"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/darkerCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/darker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lighterCommand" />

        <TextView
            android:id="@+id/darkerDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/darker_description"
            app:layout_constraintLeft_toRightOf="@+id/darkerCommand"
            app:layout_constraintTop_toBottomOf="@+id/lighterCommand"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/helpCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round"
            android:gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/darkerCommand" />

        <TextView
            android:id="@+id/helpDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/help_description"
            app:layout_constraintLeft_toRightOf="@+id/helpCommand"
            app:layout_constraintTop_toBottomOf="@+id/darkerCommand"
            android:layout_gravity="center_vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>